force-app/main/default/objects/DocuSign__c/DocuSign__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DocuSign</label>
</CustomObject>