force-app/main/default/objects/DocuSign__c/fields/IntegratorKey__c.field-meta.xml
<CustomField>
    <fullName>IntegratorKey__c</fullName>
    <label>IntegratorKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>