force-app/main/default/objects/DocuSign__c/fields/IsCarbonCopies__c.field-meta.xml
<CustomField>
    <fullName>IsCarbonCopies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCarbonCopies</label>
    <type>Checkbox</type>
</CustomField>