force-app/main/default/objects/DocuSign__c/fields/response_type__c.field-meta.xml
<CustomField>
    <fullName>response_type__c</fullName>
    <label>response_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>