force-app/main/default/objects/DocuSign__c/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>