force-app/main/default/objects/DocuSign__c/fields/signInEachLocation__c.field-meta.xml
<CustomField>
    <fullName>signInEachLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>signInEachLocation</label>
    <type>Checkbox</type>
</CustomField>