force-app/main/default/objects/DocuSign__c/fields/TokenUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenUrl__c</fullName>
    <label>TokenUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>