force-app/main/default/objects/DocuSign__c/fields/UserPassword__c.field-meta.xml
<CustomField>
    <fullName>UserPassword__c</fullName>
    <label>UserPassword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>